# AdventCode2024

./: .gitignore  README.md
Day1/: CMakeLists.txt  main.cpp
Day2/: CMakeLists.txt  main.cpp
